deb package files + dependency fixes continues

--- a/install/linux/changelog
+++ b/install/linux/changelog
@@ -1,5 +1,5 @@
 cellmotus (0.9-1) unstable; urgency=low
 
-  * Initial Release.
+  * Initial Release (Closes: #2014).
 
  -- TimeFlask <timeflask@gmail.com>  Thu, 08 Jan 2015 19:23:56 +0400
